panel scrolling & overflow fixed

--- a/public/assets/panel/panel.css
+++ b/public/assets/panel/panel.css
@@ -50,7 +50,27 @@
 .active.accordion-child{
     display: flex;
     flex-direction: column;
+    max-height: 380px;
     align-items: center;
+    overflow-y: scroll;
+}
+
+.active.accordion-child::-webkit-scrollbar-track {
+  border: 1px solid #000;
+  padding: 2px 0;
+  background-color: #cdf5ff;
+  border-radius: 8px;
+}
+
+.active.accordion-child::-webkit-scrollbar {
+  width: 14px;
+}
+
+.active.accordion-child::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #d6f6ff;
+  border: 1px solid rgb(97, 171, 201);
 }
 
 .accordion-child > h5{
